--- a/wiki/Main_Page.mediawiki
+++ b/wiki/Main_Page.mediawiki
@@ -1,33 +1,4 @@
-==Welcome to BioJava==
-See the [http://biojava.open-bio.org/news BioJava news page] for BioJava news.
-
-This site is built by the biojava community. We are currently in the process of moving the old biojava site to this site. Click [[Project:ToDo|here]] for a todo list.
-
-
-== About BioJava ==
-
-BioJava is an [[wp:Open source|open-source]] project dedicated to providing a [http://www.java.sun.com Java] framework for processing biological data. It include objects for manipulating biological sequences, file parsers, [http://biodas.org/ DAS] client and server suport, access to [http://www.biosql.org/ BioSQL] and [http://www.ensembl.org Ensembl] databases, tools for making sequence analysis GUIs and powerful analysis and statistical routines including a dynamic programming toolkit.
-
-== Getting BioJava ==
-
-BioJava is distributed under the terms of the GNU [http://www.gnu.org/licenses/lgpl.html Lesser GPL]. This means that you can use the libraries without your software being forced under either the LGPL or [http://www.gnu.org/licenses/gpl.html GPL]. LGPL is not GPL. 
-
-BioJava releases can be obtained from our [[Project:download|download]] area. Instructions for installing the library, and building source releases, can be found on the [[Project:GetStarted|Getting started]] page. 
-
-You can also maintain an up-to-date view of BioJava with [http://www.cvs.org/ CVS]. We provide anonymous [[wp:Concurrent Versions System|CVS]] server. If you wish to contribute your existing code or help maintain part of the BioJava code-base, then we can supply you with a read/write account. Sign up for the biojava-dev mailing list and post a request for an account.
-
-
-== New Logo Needed! ==
-
-The BioJava project needs a new Logo. The sunflower in the top left corner of this page doesn't really do it justice. If you have artistic flair then upload you logo to this [[Project:logo|page]]. Everyone feel free to make your comments about which ones you like. At some as yet undecided point one will become the official logo.
---[[User:Mark|Mark]] 21:21, 1 February 2006 (EST)
-
-
-== Thanks ==
- 
-
-The [http://www.open-bio.org/ open-bio] servers reside in Cambridge, Massachusetts USA with colocation facilities and internet bandwidth donated by [http://www.wyeth.com/ Wyeth] Research. We would like to thank Chris Dagdigian from [http://www.bioteam.net/ The Bioteam] for maintaining the bio* servers.
-
+Wiki software successfully installed.
 
 Please see [http://meta.wikipedia.org/wiki/MediaWiki_i18n documentation on customizing the interface]
 and the [http://meta.wikipedia.org/wiki/MediaWiki_User%27s_Guide User's Guide] for usage and configuration help.
