--- a/wiki/BioJava:Community_Portal.mediawiki
+++ b/wiki/BioJava:Community_Portal.mediawiki
@@ -23,3 +23,4 @@ The following people have contributed to BioJava in some way. If you've contribu
 == Core Developers ==
 
 For a list of the current development core team take a look [[Core Team|here]]
+[[Category:People]]
