--- a/wiki/Sylvain_Foisy.mediawiki
+++ b/wiki/Sylvain_Foisy.mediawiki
@@ -3,3 +3,4 @@ My name is Sylvain Foisy and I am a project manager for the [http://www.bioneq.q
 I first became interested in BioJava when converting from a benchworking biologist to a bio-informatician, turning a certain love of the machine from a hobby to a full-blown career. Having to learn a programming language and not having a lot of time to do so, I chose Java because it works well with my brain and they don't teach Perl around here! Jocking aside, my main contribution so far had been in creating useful docs to go with the API for example in translating BioJava in anger to french and to put some more docs into the Javadocs. I admit that I am a plain user, not a programmer but I have taken the evangelist's stick around here to do some PR. I organized a 1-week BioJava BootCamp in Montreal in 2003 and a BioJava BOF at ISMB2004 in Glasgow. Funding allowing, I'll try to organize a new BootCamp in 2007.
 
 While not doing bio-informatics, I am also a biology instructor in a junior college in Montreal, a Mac guru and enjoy whisky and suhis.
+[[Category:People]]
