--- a/wiki/Andreas_Prlic.mediawiki
+++ b/wiki/Andreas_Prlic.mediawiki
@@ -2,3 +2,5 @@ Andreas Prlic is  PostDoc at the [http://www.sanger.ac.uk/ Wellcome Trust Sanger
 Other projects he is working on include e.g.  [http://www.efamily.org.uk/software/dasclients/spice SPICE] a browser for
 protein sequence and structure annotations, based on the Distributed Annotation System.
 [[Category:People]]
+
+[http://www.spice-3d.org/cruise/ Nightly builds of BioJava] can be accessed from his CruiseControl page at [http://www.spice-3d.org/cruise/ http://www.spice-3d.org/cruise/].
